add user authentication

--- a/task_app/templates/task_app/create_task.html
+++ b/task_app/templates/task_app/create_task.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Task</title>
-    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css" />
+{% extends "task_app/base.html" %}
 
-</head>
-<body>
+{% block title %} Create task {% endblock %}
+
+{% block content %}
     <h2>Created Task</h2>
     <form action="" method="post">
         {% csrf_token %}
@@ -15,8 +10,8 @@
       <input type="submit" value="Create" />
       <button>
         <a style="color: aliceblue;" href="/tasks_list">Cancel</a>
-  </button>
+      </button>
 
     </form>
-</body>
-</html>
+
+    {% endblock %}
