--- a/task_app/templates/task_app/task_detail.html
+++ b/task_app/templates/task_app/task_detail.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=3, initial-scale=1.0">
-    <title>Task Details</title>
-    <link rel="stylesheet" href="https://matcha.mizu.sh/matcha.css">
-</head>
-<body>
+{% extends "task_app/base.html" %}
+
+{% block title %} Task Details {% endblock %}
+
+{% block content %}
     <h1>Task details</h1>
     
     <h2>Task title: {{ task.title }}</h2>
     <p>
         Description: {{ task.description }} <br>
         Completed: {{ task.completed }} <br>
-        Created_at: {{ task.created_at}}
+        Created_at: {{ task.created_at}} <br>
+        User Full Name: {{ task.user.first_name }} {{ task.user.last_name }} <br>
     </p>
 
     <a href="/tasks_list">All Task</a>
+    {% endblock %}
 </body>
 </html>
